search:filter button out of container-lg for padding issue fix

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -389,11 +389,11 @@ footer {
   @media (min-width: 992px) {
     .query-item {
       .query-img-container {
-        flex: 0 0 25%;
+        flex: 0 0 30%;
       }
 
       .query-text-container {
-        flex: 0 0 75%;
+        flex: 0 0 70%;
       }
     }
   }
